init excel demo

--- a/packages/pom.xml
+++ b/packages/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.qikemi.packages</groupId>
-  <artifactId>packages</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>packages</name>
-  <description>QiKeMi Group Base Utils</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.qikemi.packages</groupId>
+	<artifactId>packages</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>packages</name>
+	<description>QiKeMi Group Base Utils</description>
 	<url>https://github.com/qikemi/packages</url>
 	<inceptionYear>2014</inceptionYear>
 
@@ -13,7 +14,7 @@
 		<gpg.skip>true</gpg.skip>
 		<javadoc.skip>true</javadoc.skip>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jdk.version>1.8</jdk.version>
+		<jdk.version>1.7</jdk.version>
 	</properties>
 
 	<repositories>
@@ -66,6 +67,12 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sourceforge.jexcelapi</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.6.12</version>
 		</dependency>
 
 	</dependencies>
