--- a/packages/pom.xml
+++ b/packages/pom.xml
@@ -69,6 +69,14 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<!-- aliyun-openservices -->
+		<dependency>
+			<groupId>com.aliyun.openservices</groupId>
+			<artifactId>aliyun-openservices</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+
+		<!-- jexcel api -->
 		<dependency>
 			<groupId>net.sourceforge.jexcelapi</groupId>
 			<artifactId>jxl</artifactId>
